--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,11 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10,<3.12"
-numpy = "^1.23.3"
-scipy = "^1.9.1"
 pyEDFlib = "^0.1.30"
+wxPython = "^4.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
-ipykernel = "^6.16.0"
 black = {version = "^22.8.0", allow-prereleases = true}
 pyinstaller = "^5.5"
 
