--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.10,<3.12"
 pyEDFlib = "^0.1.30"
 wxPython = "^4.2.0"
+chardet = "^5.0.0"
+Unidecode = "^1.3.6"
+dateparser = "^1.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
